--- a/package.json
+++ b/package.json
@@ -19,5 +19,7 @@
   "author": "",
   "license": "ISC",
   "description": "",
-  "dependencies": {}
+  "dependencies": {
+    "html-webpack-plugin": "^5.6.0"
+  }
 }
