--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "install:app1": "cd app1 && npm install",
     "install:app2": "cd app2 && npm install",
     "start": "npm run start:app1 & npm run start:app2",
-    "build": "npm run build:app1 & npm run build:app2",
-    "build:prod": "npm run build:app1:prod & npm run build:app2:prod",
+    "build": "rm -rf dist && npm run build:app1 & npm run build:app2",
+    "build:prod": "rm -rf dist && npm run build:app1:prod & npm run build:app2:prod",
     "install": "npm run install:app1 & npm run install:app2"
   },
   "keywords": [],
@@ -21,5 +21,6 @@
   "description": "",
   "dependencies": {
     "html-webpack-plugin": "^5.6.0"
-  }
+  },
+  "devDependencies": {}
 }
