--- a/app1/package.json
+++ b/app1/package.json
@@ -15,13 +15,13 @@
   "dependencies": {
     "@babel/preset-env": "^7.24.6",
     "@babel/preset-react": "^7.24.6",
+    "@module-federation/enhanced": "^0.0.0-next-20240605063149",
     "babel-loader": "^9.1.3",
     "html-webpack-plugin": "^5.6.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.0.4",
-    "@module-federation/enhanced": "0.1.16"
+    "webpack-dev-server": "^5.0.4"
   }
 }
