--- a/package.json
+++ b/package.json
@@ -2,14 +2,18 @@
   "name": "root",
   "version": "1.0.0",
   "scripts": {
-    "start:app1": "cd app1 && npm run start",
-    "start:app2": "cd app2 && npm run start",
-    "build:app1": "cd app1 && npm run build",
-    "build:app2": "cd app2 && npm run build",
-    "build:app1:prod": "cd app1 && npm run build:prod",
-    "build:app2:prod": "cd app2 && npm run build:prod",
     "install:app1": "cd app1 && npm install",
     "install:app2": "cd app2 && npm install",
+    "install:app3": "cd app3 && npm install",
+    "start:app1": "cd app1 && npm run start",
+    "start:app2": "cd app2 && npm run start",
+    "start:app3": "cd app3 && npm run start",
+    "build:app1": "cd app1 && npm run build",
+    "build:app2": "cd app2 && npm run build",
+    "build:app3": "cd app3 && npm run build",
+    "build:app1:prod": "cd app1 && npm run build:prod",
+    "build:app2:prod": "cd app2 && npm run build:prod",
+    "build:app3:prod": "cd app3 && npm run build:prod",
     "start": "npm run start:app1 & npm run start:app2",
     "build": "rm -rf dist && npm run build:app1 & npm run build:app2",
     "build:prod": "rm -rf dist && npm run build:app1:prod & npm run build:app2:prod",
@@ -20,7 +24,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "html-webpack-plugin": "^5.6.0"
-  },
-  "devDependencies": {}
+    "css-loader": "^7.1.2",
+    "html-webpack-plugin": "^5.6.0",
+    "mini-css-extract-plugin": "^2.9.0",
+    "postcss-loader": "^8.1.1"
+  }
 }
