--- a/app2/package.json
+++ b/app2/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "@babel/preset-env": "^7.24.6",
     "@babel/preset-react": "^7.24.6",
-    "@module-federation/enhanced": "^0.0.0-next-20240605063149",
+    "@module-federation/enhanced": "0.2.1",
     "babel-loader": "^9.1.3",
     "html-webpack-plugin": "^5.6.0",
     "react": "^18.3.1",
